--- a/open-trials-report/src/components/searchRes.css
+++ b/open-trials-report/src/components/searchRes.css
@@ -6,13 +6,14 @@ body {
 }
 
 h6 {
-    align-content: 'left';
+    /* align-content: 'left';
+    margin-bottom: 20px; */
 }
 
 .color-block-head {
     opacity: 0.9;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 23px;
     line-height: 1;
     margin-bottom: 20px;
     background: #ffffff;
@@ -21,14 +22,14 @@ h6 {
 }
 
 .card {
-    max-width: 70%;
+    max-width: 100%;
      min-height: 250px;
-     background: #02b875;
+     background: #1a2639;
      padding: 30px;
      box-sizing: border-box;
      color: #FFF;
      margin:20px;
-     box-shadow: 0px 2px 18px -4px rgba(0,0,0,0.75);
+     box-shadow: 0px 2px 38px -4px rgba(0,0,0,0.75);
      align-content: 'center';
      
 }
