--- a/open-trials-report/src/pages/homePage.css
+++ b/open-trials-report/src/pages/homePage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Avenir');
+
 h1 {
     text-align: left;
     padding: 15px;
@@ -9,6 +11,16 @@ h6 {
     margin-bottom: -1.8%;
 }
 
+h5 {
+    text-align: left;
+    margin-bottom: -1.8%;
+}
+
 button {
     margin-top: 20px;
+}
+
+p {
+    margin-top: 1%;
+    margin-bottom: -0.8%;
 }
