--- a/open-trials-report/src/components/searchRes.css
+++ b/open-trials-report/src/components/searchRes.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Avenir');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
     font-family: 'Avenir', sans-serif;
@@ -27,9 +27,9 @@ h6 {
      background: #1a2639;
      padding: 30px;
      box-sizing: border-box;
+     box-shadow: 0 4px 80px 0 rgba(0,0,0,0.9);
      color: #FFF;
      margin:20px;
-     box-shadow: 0px 2px 38px -4px rgba(0,0,0,0.75);
      align-content: 'center';
      
 }
