changed button margins and centered 'name your report' text

--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -32,3 +32,12 @@ p {
 .browser-default {
     margin-top: 1%;
 }
+
+.modal-title {
+    margin-bottom: 0.1%;
+    text-align: center;
+}
+
+.modal-footer {
+    margin-bottom: 5%;
+}
