--- a/src/components/searchRes.css
+++ b/src/components/searchRes.css
@@ -23,13 +23,13 @@ h6 {
 
 .card {
     max-width: 100%;
-     min-height: 250px;
+     min-height: 100px;
      background: #1a2639;
      padding: 30px;
      box-sizing: border-box;
      box-shadow: 0 4px 80px 0 rgba(0,0,0,0.9);
      color: #FFF;
-     margin:20px;
+     margin: 0 0 20px 0;
      align-content: 'center';
      
 }
@@ -37,6 +37,7 @@ h6 {
 .addRemove {
     display: inline-block;
     padding: 6px 12px;
+    margin-top: 2.7%;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: normal;
@@ -59,4 +60,8 @@ h6 {
 .addRemove:hover{
     color:#02b875;
     background: #FFF;
+} 
+
+h6 {
+    text-align: left;
 }
