added new search bar, but need to make some changes

--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -53,6 +53,50 @@ p {
 
 .mdl-textfield {
     margin: auto;
-    /* padding: 10px; */
+    padding: 10px;
     width: 100%;
 }
+
+.search-container {
+    width: 49%;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  input#search-bar {
+    margin: 0 auto;
+    width: 100%;
+    height: 45px;
+    padding: 0 20px;
+    font-size: 1rem;
+    border: 1px solid #d0cfce;
+    outline: none;
+  }
+  input#search-bar:focus {
+    border: 1px solid #192639;
+    transition: 0.35s ease;
+    color: #032e6e;
+  }
+  input#search-bar:focus::-webkit-input-placeholder {
+    transition: opacity 0.45s ease;
+    opacity: 0;
+  }
+  input#search-bar:focus::-moz-placeholder {
+    transition: opacity 0.45s ease;
+    opacity: 0;
+  }
+  input#search-bar:focus:-ms-placeholder {
+    transition: opacity 0.45s ease;
+    opacity: 0;
+  }
+  
+  .search-icon {
+    position: relative;
+    float: right;
+    width: 75px;
+    height: 75px;
+    top: -62px;
+    right: -45px;
+  }
+  
+  
