--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -16,7 +16,7 @@ h6 {
 
 h5 {
     text-align: left;
-    margin-bottom: -1.8%;
+    margin-bottom: 1.8%;
 }
 
 .searchBtn {
@@ -51,8 +51,61 @@ p {
     }
 }
 
-.mdl-textfield {
+/* .mdl-textfield {
     margin: auto;
-    /* padding: 10px; */
+    padding: 10px;
     width: 100%;
+} */
+
+.form {
+    margin-left: 9%;
+    margin-right: auto;
 }
+
+.search {
+    box-shadow: 0 20px 10px -10px rgba(200, 200, 200, 0.5);
+    display: inline-block;
+  }
+  
+  .search__input {
+    border: 0;
+    outline: 0;
+    line-height: 50px;
+    font-size: 14px;
+    padding: 0 18px;
+    float: center;
+    width: 60%;
+  }
+  
+  .search__button {
+    box-shadow: -10px 0 10px -5px rgba(10, 15, 22, 0.5);
+    color: #fff;
+    background-color: #1a2639;
+    width: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    outline: 0;
+    transition: box-shadow .3s ease-out;
+  }
+  .search__button:active {
+    box-shadow: -10px 0 10px -10px rgba(10, 15, 22, 0.5);
+  }
+  
+  html {
+    background-color: #EAEDF2;
+    display: table;
+    width: 100%;
+    height: 100%;
+    font-family: arial;
+  }
+  
+  body {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+  }
+  
+  
