--- a/src/components/searchRes.css
+++ b/src/components/searchRes.css
@@ -25,12 +25,13 @@ h6 {
     max-width: 100%;
      min-height: 100px;
      background: #1a2639;
-     padding: 30px;
+     padding: 30px;  
      box-sizing: border-box;
      box-shadow: 0 4px 80px 0 rgba(0,0,0,0.9);
      color: #FFF;
      margin: 0 0 20px 0;
-     align-content: 'center';
+     /* align-content: 'center'; */
+     display: inline-block;
      
 }
 
