--- a/src/components/searchRes.css
+++ b/src/components/searchRes.css
@@ -5,9 +5,16 @@ body {
     font-size: 20px;
 }
 
+
 h6 {
-    /* align-content: 'left';
-    margin-bottom: 20px; */
+    align-content: 'left';
+    margin-bottom: 20px;
+}
+
+.column {
+    float: left;
+    width: 30%;
+    padding: 0 10px;
 }
 
 .color-block-head {
@@ -16,27 +23,27 @@ h6 {
     font-size: 23px;
     line-height: 1;
     margin-bottom: 20px;
-    color: #ffffff;
+    color: #190EAB;
     width: 100%;
 }
 
 .card {
-     min-height: 100px;
      /* background: #1a2639; */
-     padding: 30px;  
+     padding: 3%;  
      /* color: #FFF; */
      margin: 0 0 20px 0;
     border-style: dotted;
-    padding-left: 3%;
-     /* box-sizing: border-box; */
-     /* box-shadow: 0 4px 80px 0 rgba(0,0,0,0.9); */
-     /* align-content: 'center'; */
-     /* display: inline-block; */
+    /* padding-left: 3%; */
+    /* max-width: 40%; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* display: inline-block; */
      
 }
 .collapsible-body {
     border-style: dotted;
+    /* left: 50%; */
 }
+
 
 .addRemove {
     display: inline-block;
@@ -68,4 +75,8 @@ h6 {
 
 h6 {
     text-align: left;
+}
+
+.links {
+    color: #016722;
 }
