--- a/src/components/searchRes.css
+++ b/src/components/searchRes.css
@@ -29,8 +29,9 @@ h6 {
 .card {
     padding: 3%;  
     margin: 0 0 20px 0;
-    border-style: dotted;
+    border-style: double;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background: white;
    
 }
 .collapsible-body {
